<resources>
    <string name="app_name">Walking Group App</string>
    <string name="gerry_password_login">Password</string>
    <string name="gerry_email_login">Email</string>
    <string name="gerry_forgot_password_login">Forgot Your Password?</string>
    <string name="gerry_login_login">Login</string>
    <string name="gerry_register_login">Register</string>
    <string name="gerry_start_welcome">Start</string>
    <string name="gerry_welcome_screen_welcome">WELCOME SCREEN</string>
    <string name="gerry_test_map_welcome">TEST MAP</string>
    <string name="gerry_join_group_map">Join Group</string>
    <string name="gerry_select_start_location_create_group">Select Start Location</string>
    <string name="gerry_select_end_location_create_group">Select End Location</string>
    <string name="gerry_view_map_parent_dashboard">View All Children</string>
    <string name="gerry_view_all_children_main">View All Children</string>
    <string name="gerry_children_list_parent_dashboard">Child List: Click To See Current Location</string>
    <string name="gerry_parent_dashboard_main">Parent Dashboard</string>
    <string name="gerry_upload_location_info">Upload Location</string>
    <string name="gerry_stop_upload_info">Stop Upload</string>
    <string name="gerry_view_group_destination_info">View Destination</string>
    <string name="gerry_apikey">D71A0AC3-1AD3-42BE-87C1-83345D63B4D9</string>
    <string name="gerry_logout_main">Logout</string>
    <string name="gerry_shop_main">SHOP</string>
    <string name="gerry_view_collections_shop">View Collection / Set Avatar</string>
    <string name="gerry_buy_popup_shop">Buy</string>
    <string name="gerry_cancel_popup_shop">Cancel</string>
    <string name="jacky_enter_user_id_hint">Enter User ID</string>
    <string name="jacky_enter_email">Enter User Email</string>
    <string name="jacky_cancel_popup">Cancel</string>
    <string name="jacky_delete_popup">Delete</string>
    <string name="jacky_people_who_you_are_monitoring_text">People who you are monitoring</string>
    <string name="jacky_people_who_are_monitoring_you_text">People who are monitoring you</string>
    <string name="jacky_name_complex_list">Name:</string>
    <string name="jacky_username_here_complex_list">UserName Here</string>
    <string name="jacky_email_complex_list">Email:</string>
    <string name="jacky_user_email_here_complex_list">User Email Here</string>
    <string name="jacky_add_button_mainmenu">Add</string>
    <string name="jacky_add_mainmenu_top">Add</string>
    <string name="jacky_add_monitoring_by">Add</string>
    <string name="jacky_add_monitoing">Add</string>
    <string name="title_activity_maps">Map</string>
    <string name="anmol_userEmailHint">user@example.com</string>
    <string name="anmol_setPasswordOneHint">Enter Password Here</string>
    <string name="anmol_setPasswordTwoHint">Enter Password Same as Above</string>
    <string name="anmol_confirmRegisterText">Confirm</string>
    <string name="anmol_signUp">Sign Up</string>
    <string name="anmol_email_address">Email Address</string>
    <string name="anmol_passwordText">Password</string>
    <string name="anmol_confirm_password">Confirm Password</string>
    <string name="anmol_passNoMatch">The Passwords do not match</string>
    <string name="anmol_skip_button">skip Button</string>
    <string name="anmol_backgroundImageWelcome">backgroundImageWelcome</string>
    <string name="anmol_UserHintName">John Doe</string>
    <string name="anmol_nameRegister">Name</string>
    <string name="jacky_view_group_activity_create_group">Create Group</string>
    <string name="jacky_view_group_activitygroups_that_you_are_in">Groups that you are in:</string>
    <string name="jacky_view_group_activity_leader_of_the_following_groups">Leader of the following groups:</string>
    <string name="jacky_view_group_activity_join_group">Join Group</string>
    <string name="jacky_create_group_activity_create">Create</string>
    <string name="jacky_create_group_activity_group_description_hint">Group Description</string>
    <string name="jacky_create_group_activity_group_description">Group Description:</string>
    <string name="jacky_create_group_activity_start_location">Start Location</string>
    <string name="jacky_create_group_activity_start_latitude">Latitude</string>
    <string name="jacky_create_group_activity_start_longitude">Longitude</string>
    <string name="jacky_create_group_activity_end_latitude">Latitude</string>
    <string name="jacky_create_group_activity_end_longitude">Longitude</string>
    <string name="jacky_create_group_activity_end_location">End Location</string>
    <string name="jacky_edit_user_user_is_in_the_following_groups">User is in the following groups</string>
    <string name="jacky_edit_user_add_group">Add Group</string>
    <string name="jacky_grouup_layout_group_description">Group Description:</string>
    <string name="group_layout_hello">Hello</string>
    <string name="jacky_edit_group">Edit Group</string>
    <string name="jacky_leave">Leave</string>
    <string name="jacky_help_button">Help</string>
    <string name="jacky_back_button">Back</string>
    <string name="jacky_how_to_use_application">How to use application:</string>
    <string name="jacky_login_explanation">On login page, either register for a new account or login with an existing one</string>
    <string name="jacky_long_click">Once on the main menu, press and hold on users to either, edit, delete or simply push the add button if you know the users id</string>
    <string name="jacky_how_to_view_group">If you click the view group button you will be taken to a page where you are able to view the groups that you are a member of or currently leading. Once again if you push and hold you are given the choice to leave the group.</string>
    <string name="jacky_how_to_create_new_group">To create a group simply press create a group and enter the specfic coordinates that the group is meeting up at, also give your group a meaningful description</string>
    <string name="jacky_how_to_join_new_group">To join a group simple press join group button and select the group from the map.</string>
    <string name="jacky_edit_user_group_text">To edit the groups of the user you are monitoring simple press and hold on the user you want to edit and the rest of the steps to remove and add will be similar to the view group</string>
    <string name="anmol_continue">Continue</string>
    <string name="anmol_you_are_a">You are a</string>
    <string name="anmol_year_you_were_born">Year you were born</string>
    <string name="anmol_registerP">Register</string>
    <string name="anmol_cell_phone_numberP">Cell Phone Number</string>
    <string name="anmol_home_phone_numberP">Home Phone Number</string>
    <string name="anmol_addressP">Address</string>
    <string name="anmol_month_you_were_born_inP">Month you were born in</string>
    <string name="anmol_gradeText">Grade</string>
    <string name="anmol_teacher_s_nameText">Teacher\'s Name</string>
    <string name="anmol_emergency_contact_infoText">Emergency Contact Info</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="jacky_send_fragment_hint">Type in a message to send</string>
    <string name="jacky_view_groups_button_text">View Groups</string>
    <string name="jacky_messages_text">Messages:</string>
    <string name="jacky_send_button_text">Send Message</string>
    <string name="jacky_list_layout_message_id">Message ID:</string>
    <string name="jacky_list_layout_from_id_number">From ID number:</string>
    <string name="jacky_from_group_text">From Group:</string>
    <string name="jacky_mark_as_read_popup">Mark as read</string>
    <string name="jacky_mark_as_unread_popup">Mark as unread</string>
    <string name="jacky_delete_delete_message">Delete</string>
    <string name="jackt_edit_user_popup">Edit User</string>
    <string name="jacky_member_of_group_information">Member of Group:</string>
    <string name="justin_profile_header">Profile</string>
    <string name="justin_name">Name:</string>
    <string name="justin_text_view_default">TextView</string>
    <string name="justin_email">Email:</string>
    <string name="justin_year_of_birth">Year of Birth:</string>
    <string name="justin_month_of_birth">Month of Birth:</string>
    <string name="justin_teacher">Teacher:</string>
    <string name="justin_address">Address:</string>
    <string name="justin_grade">Grade:</string>
    <string name="justin_home_phone">Home Phone:</string>
    <string name="justin_cell_phone">Cell Phone:</string>
    <string name="justin_emergency_contact_info">Emergency Contact Info:</string>
    <string name="justin_location">Location</string>
    <string name="justin_group">Group</string>
    <string name="justin_edit">Edit</string>
    <string name="anmol_confirm">CONFIRM</string>
    <string name="anmol_exit">EXIT</string>
    <string name="anmol_view_profile">View Profile</string>
    <string name="jacky_view_messages_button">View messages</string>
    <string name="jacky_unread_messages_text">Unread Messages:</string>
    <string name="jacky_panic_message">Panic Message</string>
    <string name="justin_view_profile_local">View Profile</string>
    <string name="anmol_levelText">Level</string>
    <string name="jacky_message_permissions">Message:</string>
    <string name="jacky_status_static_permissions">Status given:</string>
    <string name="jacky_who_gave_the_status">Who gave the status:</string>
    <string name="jacky_email_permissions">Email:</string>
    <string name="jacky_permissions_name">Name:</string>
    <string name="jacky_permissions_user_id">User ID:</string>
    <string name="jacky_check_permission_message">Message:</string>
    <string name="jacky_check_permission_status">Status:</string>
    <string name="anmol_view_collection">View Collection</string>
    <string name="anmol_collection">Collection</string>
    <string name="justin_add_points">Add Points</string>

</resources>
