<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cmpt276.project.walkinggroupapp.appactivities.MainMenuActivity">

    <Button
        android:id="@+id/justin_btnViewProfileLocal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/justin_view_profile_local"
        app:layout_constraintBottom_toTopOf="@+id/jacky_unread_messages"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/jacky_view_groups"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="144dp"
        android:layout_weight="1"
        android:text="@string/jacky_view_groups_button_text"
        app:layout_constraintBottom_toTopOf="@+id/gerry_Parent_Dashboard_Button_main"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/gerry_Logout_Button_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/gerry_logout_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/gerry_Parent_Dashboard_Button_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/gerry_view_all_children_main"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/gerry_Logout_Button_main"
        app:layout_constraintEnd_toStartOf="@+id/jacky_message_button"
        app:layout_constraintStart_toEndOf="@+id/gerry_Logout_Button_main"
        app:layout_constraintTop_toTopOf="@+id/gerry_Logout_Button_main" />

    <Button
        android:id="@+id/jacky_add_monitoring_button"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:text="@string/jacky_add_mainmenu_top"
        app:layout_constraintEnd_toEndOf="@+id/jacky_add_monitoring_by_button"
        app:layout_constraintTop_toTopOf="@+id/linearLayout4" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="210dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/jacky_add_monitoring_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/jacky_monitor_user_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jacky_people_who_you_are_monitoring_text"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="10dp" />

        <ListView
            android:id="@+id/jacky_monitoring_list"
            android:layout_width="330dp"
            android:layout_height="180dp"
            tools:layout_editor_absoluteX="15dp"
            tools:layout_editor_absoluteY="35dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="210dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/jacky_add_monitoring_by_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jacky_people_who_are_monitoring_you_text"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="240dp" />

        <ListView
            android:id="@+id/jacky_monitoing_by_list"
            android:layout_width="330dp"
            android:layout_height="180dp"
            tools:layout_editor_absoluteX="15dp"
            tools:layout_editor_absoluteY="265dp" />
    </LinearLayout>

    <Button
        android:id="@+id/jacky_add_monitoring_by_button"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/jacky_add_button_mainmenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <Button
        android:id="@+id/jacky_message_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/jacky_view_messages_button"
        app:layout_constraintBottom_toBottomOf="@+id/gerry_Parent_Dashboard_Button_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gerry_Parent_Dashboard_Button_main" />

    <TextView
        android:id="@+id/jacky_unread_messages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/jacky_unread_messages_text"
        app:layout_constraintBottom_toTopOf="@+id/jacky_message_button"
        app:layout_constraintStart_toEndOf="@+id/jacky_view_groups" />

    <TextView
        android:id="@+id/jacky_number_of_unread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/jacky_message_button"
        app:layout_constraintStart_toEndOf="@+id/jacky_unread_messages" />

    <ImageButton
        android:id="@+id/anmol_leaderBoardButton"
        android:layout_width="89dp"
        android:layout_height="49dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="184dp"
        android:layout_marginTop="8dp"
        android:layout_weight="0.5"
        android:adjustViewBounds="true"
        android:background="@null"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/jacky_view_groups"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.762"
        app:srcCompat="@drawable/leaderboard" />

    <Button
        android:id="@+id/gerry_Shop_Button_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/gerry_shop_main"
        app:layout_constraintBottom_toTopOf="@+id/gerry_Logout_Button_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/jacky_permission_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Permission"
        app:layout_constraintBottom_toTopOf="@+id/gerry_Logout_Button_main"
        app:layout_constraintEnd_toStartOf="@+id/jacky_view_groups" />

</android.support.constraint.ConstraintLayout>
