<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cmpt276.project.walkinggroupapp.appactivities.GroupInformationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jacky_member_of_group_information"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/jacky_group_description_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />

        <ListView
            android:id="@+id/jacky_user_of_group"
            android:layout_width="match_parent"
            android:layout_height="364dp" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom|center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gerry_View_Group_Destination_info"
                    android:text="@string/gerry_view_group_destination_info"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gerry_Upload_Location_Button_info"
                    android:text="@string/gerry_upload_location_info"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gerry_Stop_Upload_Button_info"
                    android:text="@string/gerry_stop_upload_info" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
