<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cmpt276.project.walkinggroupapp.appactivities.MessageActivity">

    <ListView
        android:id="@+id/jacky_message_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="79dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/jacky_send_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jacky_temp_message" />

    <TextView
        android:id="@+id/jacky_temp_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/jacky_messages_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/jacky_message_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/jacky_send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:layout_marginEnd="56dp"
        android:layout_marginStart="8dp"
        android:text="@string/jacky_send_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/jacky_panic_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jacky_message_list" />

    <Button
        android:id="@+id/jacky_panic_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:layout_marginEnd="8dp"
        android:text="@string/jacky_panic_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>
