<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:id="@+id/jacky_email_permmsion_static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/jacky_email_permissions"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/jacky_permission_email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/jacky_email_permmsion_static"/>

    <TextView
        android:id="@+id/jacky_permission_name_static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/jacky_permissions_name"
        app:layout_constraintEnd_toEndOf="@+id/jacky_email_permmsion_static"
        app:layout_constraintTop_toBottomOf="@+id/jacky_email_permmsion_static" />

    <TextView
        android:id="@+id/jacky_dynamic_name_permission"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/jacky_permission_name_static"
        app:layout_constraintTop_toBottomOf="@+id/jacky_permission_email" />

    <TextView
        android:id="@+id/jacky_userid_static_permissions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/jacky_permissions_user_id"
        app:layout_constraintEnd_toEndOf="@+id/jacky_permission_name_static"
        app:layout_constraintTop_toBottomOf="@+id/jacky_permission_name_static" />

    <TextView
        android:id="@+id/jacky_userid_dynamic_permissions"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/jacky_userid_static_permissions"
        app:layout_constraintTop_toBottomOf="@+id/jacky_dynamic_name_permission" />

    <TextView
        android:id="@+id/jacky_status_permission_static"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Status:"
        app:layout_constraintEnd_toEndOf="@+id/jacky_userid_static_permissions"
        app:layout_constraintTop_toBottomOf="@+id/jacky_userid_static_permissions" />

    <TextView
        android:id="@+id/jacky_user_permission_status"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/jacky_status_permission_static"
        app:layout_constraintTop_toBottomOf="@+id/jacky_userid_dynamic_permissions" />
</android.support.constraint.ConstraintLayout>
